--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "clean-i": "pnpm install --frozen-lockfile"
   },
   "dependencies": {
+    "@tippyjs/react": "^4.2.6",
     "next": "13.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-tooltip": "^5.11.1"
+    "react-tooltip": "^5.11.1",
+    "tippy.js": "^6.3.7"
   },
   "devDependencies": {
     "eslint": "^8.39.0",
