--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,9 @@
   "rules": {
     "import/no-unresolved": "off",
     "react/jsx-props-no-spreading": "off",
+    "react/jsx-one-expression-per-line": "off",
+    "react/button-has-type": "off",
+    "import/prefer-default-export": "off",
     "object-curly-newline": "off"
   }
 }
